--- a/html/jubilarse.html
+++ b/html/jubilarse.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Tu historia👆🤓</title>
+    <link rel="stylesheet" href="../css/bar_rosa.css">
+    <link rel="icon" href="../images/logo.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jubilarse</title>
