--- a/html/index.html
+++ b/html/index.html
@@ -62,9 +62,9 @@
         <button class="confirm-button">Confirmar</button>
     </div>
     <div class="choices-container" style="display: none;">
-        <button class="choice">Hotel</button>
+        <!-- <button class="choice">Hotel</button> -->
         <button class="choice">Far West</button>
-        <button class="choice">?</button>
+       <!-- <button class="choice">?</button> -->
         <button class="clear-button" onclick="clearInput()">Limpiar</button>
     </div>
     <audio id="background-music" src="../images/musicafondo_inicio.mp3" autoplay loop volume="0.2"></audio>
