--- a/html/jubilarse.html
+++ b/html/jubilarse.html
@@ -38,6 +38,7 @@
     <img id="hamaca_derecha" src="../images/paraiso/hamaca_derecha.png" alt="Hamaca Derecha">
     <img id="roberto_jubilado" src="../images/paraiso/roberto_jubilado.png" alt="Roberto Jubilado">
     <img id="javi_jubilado" src="../images/paraiso/javi_jubilado.png" alt="Javi Jubilado">
+    <img id="victor_caminando" src="../images/paraiso/victor_caminando.png" alt="Victor Caminando">
     <audio id="olas_mar" src="../images/paraiso/olas_mar.mp3" autoplay loop></audio>
     <script src="../js/jubilarse.js"></script>
 </body>
