--- a/html/bar_marron.html
+++ b/html/bar_marron.html
@@ -10,7 +10,7 @@
     <img id="cantina-derecha" src="../images/FarWest/bar/cantina_derecha.jpg" alt="Cantina Derecha">
     <img id="camarero-jesus" src="../images/FarWest/bar/camarero_jesus.png" alt="Camarero Jesus">
     <img id="alejandro-caminando" src="../images/FarWest/bar/alejandro_caminando.png" alt="Alejandro Caminando">
-    <img id="javi-rosa" src="../images/FarWest/bar/marron/javi_marron.png" alt="Javi Rosa">
+    <img id="javi" src="../images/FarWest/bar/marron/javi_marron.png" alt="Javi Rosa">
     <img id="camarero-jesus_charla1" src="../images/FarWest/bar/camarero_jesus_charla1.png" alt="Camarero Jesus Charla 1" style="display: none;">
     <img id="alejandro_charla1" src="../images/FarWest/bar/alejandro_charla1.png" alt="Alejandro Charla 1" style="display: none;">
     <audio id="background-music" src="../images/FarWest/bar/musica_bar_fondo.mp3" autoplay loop></audio>
